# fintrack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  seed_sample_data.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
fintrack/: __init__.py  __main__.py
fintrack/cli/: __init__.py  app.py
fintrack/core/: __init__.py  analytics.py  auth.py  exceptions.py  models.py  service.py  storage.py  validators.py
fintrack/gui/: __init__.py  app.py  charts.py  dialogs.py  home.py  icons.py  main_window.py  pages.py  theme.py  widgets.py
packaging/: fintrack_entry.py
sample_data/: sample_report.csv  sample_report.json  sample_report.txt
sample_data/data/: users.json
sample_data/data/accounts/: demo.json
scripts/: make_icons.py
tests/: test_core.py
